New method created OK

--- a/app/views/concerts/_form.html.erb
+++ b/app/views/concerts/_form.html.erb
@@ -28,8 +28,8 @@
     </div>
 
     <div class="field">
-        <%= form.label :group_id %>
-        <%= form.select(:Group_id, options_for_select(@groups)) %>
+        <%= form.label :Group_id %>
+        <%= form.text_field :Group_id %>
     </div>
 
     <div class="actions">
