--- a/app/views/concerts/show.html.erb
+++ b/app/views/concerts/show.html.erb
@@ -17,7 +17,7 @@
 
 <p>
     <strong>Group:</strong>
-    <%= @concert.Group_id %>
+    <%= @concert.group_concert %>
 <p>
 
 <%= link_to 'Edit', edit_concert_path(@concert) %>
