Concerts.count in index Group

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -6,6 +6,7 @@
             <th>Name</th>
             <th>Members</th>
             <th>Members Gender</th>
+            <th>Concerts</th>
         </tr>
     </thead>
 
@@ -15,6 +16,7 @@
                 <td><%= group.name %></td>
                 <td><%= group.members %></td>
                 <td><%= group.membersgender %></td>
+                <td><%= group.concerts_count %></td>
 
                 <br>
 
