--- a/app/views/concerts/_form.html.erb
+++ b/app/views/concerts/_form.html.erb
@@ -18,8 +18,8 @@
     </div>
 
     <div class="field">
-        <%= form.label :duration %>
-        <%= form.time_field :duration %>
+        <%= form.label :duration_in_minutes %>
+        <%= form.number_field :duration %>
     </div>
 
     <div class="field">
