Trying to bring the dates from concerts to show the Group debut

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -7,6 +7,7 @@
             <th>Members</th>
             <th>Members Gender</th>
             <th>Concerts</th>
+            <th>Debut</th>
         </tr>
     </thead>
 
@@ -17,6 +18,7 @@
                 <td><%= group.members %></td>
                 <td><%= group.membersgender %></td>
                 <td><%= group.concerts_count %></td>
+                <td><%= group.debut %></td>
 
                 <br>
 
