We bring the first concert made in the producer, to the index group as debut

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -20,6 +20,7 @@
                 <td><%= group.concerts_count %></td>
                 <td><%= group.debut %></td>
 
+
                 <br>
 
                 <td><%= link_to 'Show', group %></td>
@@ -33,3 +34,4 @@
 <br>
 
 <%= link_to 'New Group', new_group_path %>
+<%= link_to 'See concerts', concerts_path %>
