we add the total number of participants of all the concerts per band in the group index

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -8,6 +8,7 @@
             <th>Members Gender</th>
             <th>Concerts</th>
             <th>Debut</th>
+            <th>Total Asistants Over Time</th>
         </tr>
     </thead>
 
@@ -19,6 +20,7 @@
                 <td><%= group.membersgender %></td>
                 <td><%= group.concerts_count %></td>
                 <td><%= group.debut %></td>
+                <td><%= group.total_asistants_over_time %></td>
 
 
                 <br>
