group method each, changed to map

--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -15,5 +15,10 @@
     <%= @group.membersgender %>
 </p>
 
+<p>
+    <strong>Concerts this month:</strong>
+    <% @group.concerts_this_month %>
+</p>
+
 <%= link_to 'Edit', edit_group_path(@group) %>
 <%= link_to 'Back', groups_path %>
