now we show the concerts of this month in Group/show

--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -17,7 +17,7 @@
 
 <p>
     <strong>Concerts this month:</strong>
-    <% @group.concerts_this_month %>
+    <%= @group.concerts_this_month %>
 </p>
 
 <%= link_to 'Edit', edit_group_path(@group) %>
